# chip-8-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.toml  vcpkg.json
resources/: default.ch8
src/: Emulator.cpp  Emulator.h  main.cpp
src/Input/: InputManager.h  InputManagerSFML.cpp  InputManagerSFML.h  Scancode.h
src/Sound/: SoundManager.h  SoundManagerSFML.cpp  SoundManagerSFML.h
src/Window/: Window.h  WindowSFML.cpp  WindowSFML.h
